--- a/style.scss
+++ b/style.scss
@@ -107,6 +107,8 @@ main {
   }
 }
 
+/* Main */
+
 .intro-container {
   display: flex;
   flex-direction: column;
@@ -130,6 +132,58 @@ main {
     }
   }
 }
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 40px;
+  margin-bottom: 80px;
+
+  .intro-card {
+    font-size: 24px;
+    font-weight: 800;
+    padding: 24px 28px;
+    line-height: 1.3;
+    background: $pink-gradient;
+    border-radius: 8px;
+    color: $white;
+  }
+
+  .card {
+    padding: 32px 28px;
+    position: relative;
+    box-shadow: 0px 4px 16px hsl(0, 0%, 59%, 0.25);
+    border-radius: 8px;
+
+    .card-img {
+      position: absolute;
+      left: 28px;
+      bottom: 85%;
+    }
+
+    .card-title {
+      font-size: 20px;
+      font-weight: 800;
+      margin-top: 24px;
+    }
+
+    .card-link {
+      margin-top: 24px;
+      text-decoration: none;
+      display: block;
+      color: $dark-pink;
+      font-size: 18px;
+      font-weight: 700;
+    }
+
+    .card-content {
+      margin-top: 16px;
+      line-height: 1.6;
+    }
+  }
+}
+
+/* Footer */
 
 footer {
   background-color: $dark-purple;
