--- a/style.scss
+++ b/style.scss
@@ -130,14 +130,11 @@ header {
     .header-content {
       margin-top: 26px;
       margin-bottom: 24px;
+      color: $gray;
     }
     .intro-btn {
       @include btn($pink-gradient, 15px 37px);
     }
-  }
-
-  .tablet-header-img {
-    display: none;
   }
 }
 
@@ -166,7 +163,7 @@ header {
     .card-img {
       position: absolute;
       left: 28px;
-      bottom: 85%;
+      bottom: 88%;
     }
 
     .card-title {
@@ -187,6 +184,7 @@ header {
     .card-content {
       margin-top: 16px;
       line-height: 1.6;
+      color: $gray;
     }
   }
 }
@@ -205,17 +203,15 @@ footer {
 
   .intro-container {
     display: grid;
+    align-items: center;
     grid-template-columns: repeat(2, 1fr);
     overflow: hidden;
+    margin-right: -16px;
 
     .header-intro-image {
       position: relative;
       overflow: hidden;
-      margin-right: -120px;
-
-      .mobile-header-img {
-        display: none;
-      }
+      margin-right: -140px;
 
       .tablet-header-img {
         display: inline-block;
@@ -234,8 +230,69 @@ footer {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 10px;
     row-gap: 32px;
+
+    .intro-card {
+      padding-top: 56px;
+    }
+
+    .card {
+      padding: 56px 32px 32px;
+    }
+  }
+
+  .footer {
+    max-width: 48rem;
+    margin: 0 auto;
   }
 }
 
 @media (min-width: 90rem) {
+  .max-width-wrapper {
+    max-width: 90rem;
+  }
+
+  .intro-container {
+    align-items: center;
+    margin-top: 0;
+    .header-intro-chunk {
+      margin: 165px;
+    }
+  }
+
+  .container {
+    margin-left: 165px;
+    margin-right: 165px;
+  }
+
+  .cards {
+    margin: 46px 165px 140px;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    row-gap: 56px;
+
+    .intro-card {
+      padding-right: 120px;
+      padding-top: 64px;
+    }
+
+    .card {
+      padding: 64px 32px 40px;
+    }
+  }
+
+  .footer {
+    max-width: 90rem;
+    margin: 0 auto;
+  }
+
+  .footer {
+    max-width: 90rem;
+    margin: 0 auto;
+  }
+  .footer img {
+    margin-left: 165px;
+  }
+  .footer a {
+    margin-right: 165px;
+  }
 }
