--- a/style.scss
+++ b/style.scss
@@ -123,7 +123,7 @@ header {
     display: flex;
     flex-direction: column;
     .header-title {
-      font-size: 40px;
+      font-size: 2.5rem;
       font-weight: 800;
       line-height: 1.2;
     }
@@ -145,7 +145,7 @@ header {
   margin-bottom: 80px;
 
   .intro-card {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 800;
     padding: 24px 28px;
     line-height: 1.3;
@@ -167,7 +167,7 @@ header {
     }
 
     .card-title {
-      font-size: 20px;
+      font-size: 1.2rem;
       font-weight: 800;
       margin-top: 24px;
     }
@@ -177,7 +177,7 @@ header {
       text-decoration: none;
       display: block;
       color: $dark-pink;
-      font-size: 18px;
+      font-size: 1.1rem;
       font-weight: 700;
     }
 
